@@ -11,6 +11,7 @@ Changes between 1.3.4 and 1.4.0.dev0
 - major refactoring of internal collection handling
 - majorly reduce py.test core code, shift function/python testing to own plugin
 - fix issue88 (finding custom test nodes from command line arg)
+- introduce py.builtin.any()
 
 Changes between 1.3.3 and 1.3.4
 ==================================================
